--- a/main/css/ranking.css
+++ b/main/css/ranking.css
@@ -14,30 +14,53 @@ body {
     background-repeat: no-repeat;
 }
 
-#clear_time{
+#clear_time {
     color: white;
-    font-weight: bold;
+    font-weight: 1000;
     font-size: 100px;
     font-family: 'DotGothic16', sans-serif;
     text-align: center;
     padding: 15px 0;
-    text-shadow:2px 2px 0 #ffe281, -2px -2px 0 #ffe281,
-    -2px 2px 0 #ffe281, 2px -2px 0 #ffe281,
-    0px 2px 0 #ffe281,  0-2px 0 #ffe281,
-    -2px 0 0 #ffe281, 2px 0 0 #ffe281;
+    margin: 30px 10px 10px 10px;
+    text-shadow: 2px 2px 0 #ffe281, -2px -2px 0 #ffe281, -2px 2px 0 #ffe281, 2px -2px 0 #ffe281, 0px 2px 0 #ffe281, 0 -2px 0 #ffe281, -2px 0 0 #ffe281, 2px 0 0 #ffe281;
+}
+
+#nextPageForm {
+    display: flex;
+    flex-direction: column;      /* 縦並びにする */
+    align-items: center;         /* 横方向の中央揃え */
+    margin: 0;                   /* フォーム全体の余白をゼロに */
+    padding: 0;
+    text-align: center;
 }
 
 #name {
-    width: 50%;
+    width: 70vw;
+    height: 10vh;
     padding: 8px 10px;
     border: none;
     border-radius: 25px;
-    background: #f7f7f7;
-    color: #333;
+    background-color: #D9D9D9;
+    color: #928B8B;
     font-size: 1em;
     line-height: 1.5;
+    margin-top: 0;               /* テキスト入力欄の上部余白をゼロに */
 }
 
 #name::placeholder {
     color: #999;
+}
+
+#push button {
+    padding: 10px 20px;
+    margin: 150px 120px 0px 120px;
+    border: none;
+    border-radius: 25px;
+    background-color: black;
+    color: white;
+    font-size: 25px;
+    cursor: pointer;
+    height: 80px;
+    width: 200px;
+    border-radius: 100px;
 }
