--- a/main/css/ranking.css
+++ b/main/css/ranking.css
@@ -41,8 +41,8 @@ body {
     border: none;
     border-radius: 25px;
     background-color: #D9D9D9;
-    color: #928B8B;
-    font-size: 1em;
+    color: #000000;
+    font-size: 30px;
     line-height: 1.5;
     margin-top: 0;               /* テキスト入力欄の上部余白をゼロに */
 }
@@ -53,7 +53,7 @@ body {
 
 #push button {
     padding: 10px 20px;
-    margin: 150px 120px 0px 120px;
+    margin: 150px 20px 0px 20px;
     border: none;
     border-radius: 25px;
     background-color: black;
