--- a/main/css/stageSelect.css
+++ b/main/css/stageSelect.css
@@ -13,7 +13,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 70px;
+    margin-top: 20px;
+    position: relative;
 }
 
 .back-button {
@@ -25,13 +26,14 @@ body {
     padding: 10px 20px;
     cursor: pointer;
     position: absolute;
-    top: 20px;
+    top: 0px;
     left: 20px;
 }
 
 h1 {
+    margin: 0;
     font-size: 40px;
-    margin-bottom: 20px;
+    line-height: 60px;
 }
 
 .stage-grid {
@@ -50,10 +52,12 @@ h1 {
 }
 
 .stage-button img {
-    width: 100%;
-    height: auto;
+    width: 280px; /* 固定幅 */
+    height: 160px; /* 固定高さ */
+    object-fit: cover; /* 中央でトリミング */
     display: block;
 }
+
 
 .stage-button p {
     font-size: 22px;
