--- a/main/css/clear.css
+++ b/main/css/clear.css
@@ -19,7 +19,7 @@ body {
     font-size: 50px;
     font-family: 'DotGothic16', sans-serif;
     text-align: center;
-    padding: 100px 0;
+    /* padding: 100px 0; */
     text-shadow:1px 1px 0 #000000, -1px -1px 0 #000000,
     -1px 1px 0 #000000, 1px -1px 0 #000000,
     0px 1px 0 #000000,  0-1px 0 #000000,
